--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv='cache-control' content='no-cache'> 
+    <meta http-equiv='expires' content='0'> 
+    <meta http-equiv='pragma' content='no-cache'>
     <title>Sosna-app</title>
 
     <link rel="stylesheet" href="./index.css">
     <link rel="icon" href="./assets/sosna-icon.jpg">
     <link rel="manifest" href="./manifest.json">
 
+    <script src="DragDropTouch.js"></script>
     <script src="./dexie.min.js"></script>
     <script>
       if ('serviceWorker' in navigator) {
